--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,9 +9,11 @@
   "author": "Ankur Kumar Rai",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13"
   }
 }
