--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,8 +16,13 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
+    "uuid": "^8.3.2",
     "validator": "^13.6.0",
     "web-vitals": "^1.1.1",
     "yup": "^0.32.9"
