--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,10 +10,12 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "chart.js": "^3.3.2",
     "classnames": "^2.3.1",
     "concurrently": "^6.2.0",
     "formik": "^2.2.6",
     "react": "^17.0.1",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.4",
